--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,24 @@
 	<groupId>afpa</groupId>
 	<artifactId>book</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>18</source>
+					<target>18</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<name>book</name>
+
+	<properties>
+		<maven.compiler.target>18</maven.compiler.target>
+		<maven.compiler.source>18</maven.compiler.source>
+	</properties>
 
 
 	<dependencies>
